--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <a class="main-header-logo">
           <img src="img/logo-device.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
         </a>
-
         <div class="user-navigation">
           <form class="user-navigation-form" action="https://echo.htmlacademy.ru" method="get">
             <div class="navigation-search-container">
@@ -33,7 +32,6 @@
             </li>
           </ul>
         </div>
-
         <ul class="site-navigation">
           <li class="site-navigation-item site-navigation-catalog">
             <a class="site-navigation-link site-catalog-link" href="catalog.html">Каталог товаров</a>
@@ -64,69 +62,75 @@
             <a class="site-navigation-link" href="blank.html">Контакты</a>
           </li>
         </ul>
-
       </nav>
     </header>
-
-
-
-
-
     <main class="page-main">
       <h1 class="visually-hidden">Интернет-магазин «Девайс»</h1>
       <section class="slider">
         <h2 class="visually-hidden">Подборка товаров</h2>
         <ul class="slider-list">
-          <li class="slider-item slider-item-current">
+          <li class="slider-item slider-item-stick slider-item-current">
             <h3 class="visually-hidden">Селфи-палка</h3>
-            <img src="img/slider-sticks.png" alt="Три селфи-палки длиной восемь метров" width="384" height="486">
-            <p class="slider-slogan">Делай селфи, как Бен Стиллер!</p>
-            <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-            <a class="button slider-button" href="blank.html">Подробнее</a>
-            <table class="slider-table">
-              <tr class="slider-table-data">
-                <td>8,5 м</td>
-                <td>5 кг</td>
-                <td>Карбон</td>
-              </tr>
-              <tr class="slider-table-headings">
-                <th>Длина палки</th>
-                <th>Вес палки</th>
-                <th>Материал</th>
-              </tr>
-            </table>
+            <div class="slider-image-container">
+              <img class="slider-image" src="img/slider-sticks.png" alt="Три селфи-палки длиной восемь метров" width="384" height="486">
+            </div>
+            <div class="slider-content">
+              <p class="slider-slogan">Делай селфи,<br> как Бен Стиллер!</p>
+              <p class="slider-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+              <a class="button slider-button" href="blank.html">Подробнее</a>
+              <table class="slider-table">
+                <tr class="slider-table-data">
+                  <td>8,5 м</td>
+                  <td>5 кг</td>
+                  <td>Карбон</td>
+                </tr>
+                <tr class="slider-table-headings">
+                  <th>Длина палки</th>
+                  <th>Вес палки</th>
+                  <th>Материал</th>
+                </tr>
+              </table>
+            </div>
           </li>
-          <li class="slider-item">
+          <li class="slider-item slider-item-watch">
             <h3 class="visually-hidden">Фитнес-браслет</h3>
-            <img src="img/slider-bracelet.png" alt="Фитнес-браслет, показывающий сообщение на экране «Я вижу, что ты снова ешь»" width="345" height="485">
-            <p class="slider-slogan">Худеем правильно!</p>
-            <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
-            <a class="button slider-button" href="blank.html">Подробнее</a>
-            <table class="slider-table">
-              <tr class="slider-table-data">
-                <td>48 часов</td>
-              </tr>
-              <tr class="slider-table-headings">
-                <th>Без подзарядки</th>
-              </tr>
-            </table>
+            <div class="slider-image-container">
+              <img class="slider-image" src="img/slider-bracelet.png" alt="Фитнес-браслет, показывающий сообщение на экране «Я вижу, что ты снова ешь»" width="345" height="485">
+            </div>
+            <div class="slider-content">
+              <p class="slider-slogan">Худеем<br> правильно!</p>
+              <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы<br> не пропускать занятия и соблюдать диету.</p>
+              <a class="button slider-button" href="blank.html">Подробнее</a>
+              <table class="slider-table">
+                <tr class="slider-table-data">
+                  <td>48 часов</td>
+                </tr>
+                <tr class="slider-table-headings">
+                  <th>Без подзарядки</th>
+                </tr>
+              </table>
+            </div>
           </li>
-          <li class="slider-item">
+          <li class="slider-item slider-item-quadrocopter">
             <h3 class="visually-hidden">Квадрокоптер</h3>
-            <img src="img/slider-quadrocopter.png" alt="Квадрокоптер, выпускающий мощный красный лазер из камеры" width="526" height="334">
-            <p class="slider-slogan">Порхает как бабочка, жалит как пчела!</p>
-            <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
-            <a class="button slider-button" href="blank.html">Подробнее</a>
-            <table class="slider-table">
-              <tr class="slider-table-data">
-                <td>800 м</td>
-                <td>50 м</td>
-              </tr>
-              <tr class="slider-table-headings">
-                <th>Дальность полета</th>
-                <th>Радиус поражения</th>
-              </tr>
-            </table>
+            <div class="slider-image-container">
+              <img class="slider-image" src="img/slider-quadrocopter.png" alt="Квадрокоптер, выпускающий мощный красный лазер из камеры" width="526" height="334">
+            </div>
+            <div class="slider-content">
+              <p class="slider-slogan">Порхает как бабочка, жалит как пчела!</p>
+              <p class="slider-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+              <a class="button slider-button" href="blank.html">Подробнее</a>
+              <table class="slider-table">
+                <tr class="slider-table-data">
+                  <td>800 м</td>
+                  <td>50 м</td>
+                </tr>
+                <tr class="slider-table-headings">
+                  <th>Дальность полета</th>
+                  <th>Радиус поражения</th>
+                </tr>
+              </table>
+            </div>
           </li>
         </ul>
         <div class="slider-controls">
