--- a/index.html
+++ b/index.html
@@ -142,12 +142,24 @@
       <section class="popular">
         <h2 class="visually-hidden">Популярные товары</h2>
         <ul class="popular-list">
-          <li>Виртуальная реальность</li>
-          <li>Моноподы для селфи</li>
-          <li>Экшн-камеры</li>
-          <li>Фитнес-браслеты</li>
-          <li>Умные часы</li>
-          <li>Квадрокоптеры</li>
+          <li>
+            <a class="popular-link popular-virtual" href="blank.html">Виртуальная реальность</a>
+          </li>
+          <li>
+            <a class="popular-link popular-monopods" href="blank.html">Моноподы<br> для селфи</a>
+          </li>
+          <li>
+            <a class="popular-link popular-action" href="blank.html">Экшн-камеры</a>
+          </li>
+          <li>
+            <a class="popular-link popular-fitness" href="blank.html">Фитнес-браслеты</a>
+          </li>
+          <li>
+            <a class="popular-link popular-watch" href="blank.html">Умные часы</a>
+          </li>
+          <li>
+            <a class="popular-link popular-quadrocopters" href="blank.html">Квадрокоптеры</a>
+          </li>
         </ul>
       </section>
       <section class="services">
