--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           <h2 class="visually-hidden">Услуги нашего магазина</h2>
           <ul class="services-buttons-list">
             <li>
-              <a class="button services-button" href="#">Доставка</a>
+              <a class="button services-button services-button-active" href="#">Доставка</a>
             </li>
             <li>
               <a class="button services-button" href="#">Гарантия</a>
@@ -179,11 +179,11 @@
           <ul class="services-list">
             <li class="services-item services-item-current">
               <h3 class="services-title">Доставка</h3>
-              <p class="services-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              <p class="services-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо<br> заработаем, поднимая его на ваш этаж.</p>
             </li>
             <li class="services-item">
               <h3 class="services-title">Гарантия</h3>
-              <p class="services-text">Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно.</p>
+              <p class="services-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно же.</p>
             </li>
             <li class="services-item">
               <h3 class="services-title">Кредит</h3>
