Сверстала разделы о нас и контакты

--- a/index.html
+++ b/index.html
@@ -196,35 +196,45 @@
         <h2 class="visually-hidden">Наши партнеры</h2>
         <ul class="partners-list">
           <li>
-            <img src="img/logo-dji-gray.jpg" alt="Логотип компании ДиДжиАй" width="260" height="100">
+            <a class="partners-link" href="#">
+              <img class="partners-image" src="img/logo-dji.png" alt="Логотип компании ДиДжиАй" width="260" height="100">
+            </a>
           </li>
           <li>
-            <img src="img/logo-gadgets-gray.jpg" alt="Логотип компании ЭсПи Гаджетс" width="260" height="100">
+            <a class="partners-link" href="#">
+              <img class="partners-image" src="img/logo-gadgets.jpg" alt="Логотип компании ЭсПи Гаджетс" width="260" height="100">
+            </a>
           </li>
           <li>
-            <img src="img/logo-gopro-gray.jpg" alt="Логотип компании ГоПро" width="260" height="100">
+            <a class="partners-link" href="#">
+              <img class="partners-image" src="img/logo-gopro.jpg" alt="Логотип компании ГоПро" width="260" height="100">
+            </a>
           </li>
           <li>
-            <img src="img/logo-vive-gray.jpg" alt="Логотип компании Виве" width="260" height="100">
+            <a class="partners-link" href="#">
+              <img class="partners-image" src="img/logo-vive.jpg" alt="Логотип компании Виве" width="260" height="100">
+            </a>
           </li>
         </ul>
       </section>
       <div class="about-contacts-columns">
-        <section class="about-us">
+        <section class="about-us about-contacts-column">
           <h2 class="about-us-heading">О нас</h2>
           <p class="about-us-text">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
           <p class="about-us-text">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
           <ul class="about-us-transport-list">
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
+            <li class="about-us-item">Деловые линии</li>
+            <li class="about-us-item">Автотрейдинг</li>
+            <li class="about-us-item">ЖелДорЭкспедиция</li>
           </ul>
           <a class="button about-us-button" href="blank.html">Подробнее о нас</a>
         </section>
-        <section class="contacts">
+        <section class="contacts about-contacts-column">
           <h2 class="contacts-heading">Контакты</h2>
           <p class="contacts-text">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-          <img src="img/map.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="560" height="222">
+          <a class="contacts-map-link" href="blank.html">
+            <img src="img/map.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="560" height="222">
+          </a>
           <a class="button contacts-button" href="blank.html">Напишите нам</a>
         </section>
       </div>
