--- a/catalog.html
+++ b/catalog.html
@@ -235,13 +235,13 @@
       </div>
     </main>
     <footer class="page-footer">
-      <div class="container">
+      <div class="footer-container">
         <div class="footer-navigation">
-          <a class="footer-logo" href="index.html">
+          <a class="footer-logo">
             <img src="img/logo-device-footer.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
           </a>
           <ul class="footer-user-navigation">
-            <li>
+            <li class="footer-navigation-login">
               <a class="footer-user-navigation-link footer-user-navigation-account" href="blank.html">Валентин Петухов</a>
               <a class="footer-user-navigation-link footer-user-navigation-logout" href="blank.html">Выйти</a>
             </li>
@@ -252,21 +252,21 @@
               <a class="footer-user-navigation-link" href="blank.html">Корзина</a>
             </li>
           </ul>
-          <ul class="footer-site-navigation">
-            <li>
-              <a class="footer-site-navigation-link" href="blank.html">Доставка</a>
-            </li>
-            <li>
-              <a class="footer-site-navigation-link" href="blank.html">Гарантия</a>
-            </li>
-            <li>
-              <a class="footer-site-navigation-link" href="blank.html">Контакты</a>
-            </li>
-          </ul>
         </div>
+        <ul class="footer-site-navigation">
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Доставка</a>
+          </li>
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Гарантия</a>
+          </li>
+          <li>
+            <a class="footer-site-navigation-link" href="blank.html">Контакты</a>
+          </li>
+        </ul>
         <section class="footer-contacts">
           <h2 class="visually-hidden">Как нас найти</h2>
-          <p class="footer-contacts-text">г. Москва, ул. Строителей, 15</p>
+          <address class="footer-contacts-text">г. Москва, ул. Строителей, 15</address>
           <p class="footer-contacts-text">Тел.:
             <a class="footer-contacts-phone-link" href="tel:+74954959595">+7 (495) 495-95-95</a>
           </p>
@@ -274,18 +274,18 @@
         <section class="footer-social">
           <h2 class="visually-hidden">Мы в социальных сетях</h2>
           <ul class="footer-social-list">
-            <li>
+            <li class="footer-social-item">
               <a class="footer-social-link" href="#" aria-label="Фейсбук"></a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a class="footer-social-link" href="#" aria-label="Инстаграм"></a>
             </li>
-            <li>
+            <li class="footer-social-item">
               <a class="footer-social-link" href="#" aria-label="Твиттер"></a>
             </li>
           </ul>
         </section>
-        <a href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
+        <a class="footer-htmlacademy-link" href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
       </div>
     </footer>
   </body>
