--- a/catalog.html
+++ b/catalog.html
@@ -34,7 +34,6 @@
             </li>
           </ul>
         </div>
-
         <ul class="site-navigation">
           <li class="site-navigation-item site-navigation-catalog">
             <a class="site-navigation-link site-catalog-link" href="catalog.html">Каталог товаров</a>
@@ -111,23 +110,23 @@
                 <legend>Цвет</legend>
                 <ul class="filter-color-list">
                   <li>
-                    <input type="checkbox" name="black" id="filter-black" checked>
+                    <input class="visually-hidden" type="checkbox" name="black" id="filter-black" checked>
                     <label class="filter-color-label" for="filter-black">Чёрный</label>
                   </li>
                   <li>
-                    <input type="checkbox" name="white" id="filter-white">
+                    <input class="visually-hidden" type="checkbox" name="white" id="filter-white">
                     <label class="filter-color-label" for="filter-white">Белый</label>
                   </li>
                   <li>
-                    <input type="checkbox" name="blue" id="filter-blue" checked>
+                    <input class="visually-hidden" type="checkbox" name="blue" id="filter-blue" checked>
                     <label class="filter-color-label" for="filter-blue">Синий</label>
                   </li>
                   <li>
-                    <input type="checkbox" name="red" id="filter-red" checked>
+                    <input class="visually-hidden" type="checkbox" name="red" id="filter-red" checked>
                     <label class="filter-color-label" for="filter-red">Красный</label>
                   </li>
                   <li>
-                    <input type="checkbox" name="pink" id="filter-pink">
+                    <input class="visually-hidden" type="checkbox" name="pink" id="filter-pink">
                     <label class="filter-color-label" for="filter-pink">Розовый</label>
                   </li>
                 </ul>
@@ -136,11 +135,11 @@
                 <legend>Bluetooth</legend>
                 <ul class="filter-bluetooth-list">
                   <li>
-                    <input type="radio" name="bluetooth-group" id="filter-yes" value="yes" checked>
+                    <input class="visually-hidden" type="radio" name="bluetooth-group" id="filter-yes" value="yes" checked>
                     <label class="filter-bluetooth-label" for="filter-yes">Есть</label>
                   </li>
                   <li>
-                    <input type="radio" name="bluetooth-group" id="filter-none" value="none">
+                    <input class="visually-hidden" type="radio" name="bluetooth-group" id="filter-none" value="none">
                     <label class="filter-bluetooth-label" for="filter-none">Нет</label>
                   </li>
                 </ul>
@@ -162,54 +161,62 @@
                   <a class="sorting-groups-link" href="#">По популярности</a>
                 </li>
               </ul>
-              <div>
-                <a href="#" aria-label="Сортировка по возрастанию"></a>
-                <a href="#" aria-label="Сортировка по убыванию"></a>
+              <div class="sorting-groups-markers">
+                <a class="sorting-groups-up" href="#" aria-label="Сортировка по возрастанию"></a>
+                <a class="sorting-groups-down sorting-marker-current" href="#" aria-label="Сортировка по убыванию"></a>
               </div>
             </div>
             <div class="sorting-products">
               <ul class="sorting-products-list">
-                <li>
-                  <a class="sorting-products-link" href="blank.html">
-                    <h3 class="sorting-products-title">Любительская селфи-палка</h3>
-                  </a>
-                  <img src="img/item-1.jpg" alt="" width="360" height="380">
-                  <p class="sorting-products-price">1 100 руб.</p>
-                  <div>
-                    <a class="button" href="blank.html">В корзину</a>
+                <li class="sorting-products-item">
+                  <img class="sorting-products-image" src="img/item-1.jpg" alt="" width="360" height="380">
+                  <div class="sorting-products-wrapper">
+                    <a class="sorting-products-link" href="blank.html">
+                      <h3 class="sorting-products-title">Любительская селфи-палка</h3>
+                    </a>
+                    <p class="sorting-products-price">1 100 руб.</p>
+                  </div>
+                  <div class="sorting-products-to-cart">
+                    <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
-                <li>
-                  <a class="sorting-products-link" href="blank.html">
-                    <h3 class="sorting-products-title">Профессиональная селфи-палка</h3>
-                  </a>
-                  <img src="img/item-2.jpg" alt="" width="360" height="380">
-                  <p class="sorting-products-price">1 500 руб.</p>
-                  <div>
-                    <a class="button" href="blank.html">В корзину</a>
+                <li class="sorting-products-item">
+                  <img class="sorting-products-image" src="img/item-2.jpg" alt="" width="360" height="380">
+                  <div class="sorting-products-wrapper">
+                    <a class="sorting-products-link" href="blank.html">
+                      <h3 class="sorting-products-title">Профессиональная<br> селфи-палка</h3>
+                    </a>
+                    <p class="sorting-products-price">1 500 руб.</p>
+                  </div>
+                  <div class="sorting-products-to-cart">
+                    <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
-                <li>
-                  <a class="sorting-products-link" href="blank.html">
-                    <h3 class="sorting-products-title">Непотопляемая селфи-палка</h3>
-                  </a>
-                  <img src="img/item-3.jpg" alt="" width="360" height="380">
-                  <p class="sorting-products-price">1 500 руб.</p>
-                  <div>
-                    <a class="button" href="blank.html">В корзину</a>
+                <li class="sorting-products-item">
+                  <img class="sorting-products-image" src="img/item-3.jpg" alt="" width="360" height="380">
+                  <div class="sorting-products-wrapper">
+                    <a class="sorting-products-link" href="blank.html">
+                      <h3 class="sorting-products-title">Непотопляемая<br> селфи-палка</h3>
+                    </a>
+                    <p class="sorting-products-price">1 500 руб.</p>
+                  </div>
+                  <div class="sorting-products-to-cart">
+                    <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
-                <li>
-                  <a class="sorting-products-link" href="blank.html">
-                    <h3 class="sorting-products-title">Селфи-палка «Следуй за мной»</h3>
-                  </a>
-                  <img src="img/item-4.jpg" alt="" width="360" height="380">
-                  <p class="sorting-products-price">1 900 руб.</p>
-                  <div>
-                    <a class="button" href="blank.html">В корзину</a>
+                <li class="sorting-products-item">
+                  <img class="sorting-products-image" src="img/item-4.jpg" alt="" width="360" height="380">
+                  <div class="sorting-products-wrapper">
+                    <a class="sorting-products-link" href="blank.html">
+                      <h3 class="sorting-products-title">Селфи-палка «Следуй за мной»</h3>
+                    </a>
+                    <p class="sorting-products-price">1 900 руб.</p>
+                  </div>
+                  <div class="sorting-products-to-cart">
+                    <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
