Добавила на главную страницу графику и интерактивные состояния элементам

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,6 @@
         <a class="main-header-logo" href="index.html">
           <img src="img/logo-device.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
         </a>
-
         <div class="user-navigation">
           <form class="user-navigation-form" action="https://echo.htmlacademy.ru" method="get">
             <div class="navigation-search-container">
@@ -169,52 +168,52 @@
             <div class="sorting-products">
               <ul class="sorting-products-list">
                 <li class="sorting-products-item">
-                  <img class="sorting-products-image" src="img/item-1.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-wrapper">
                     <a class="sorting-products-link" href="blank.html">
                       <h3 class="sorting-products-title">Любительская селфи-палка</h3>
                     </a>
                     <p class="sorting-products-price">1 100 руб.</p>
                   </div>
+                  <img class="sorting-products-image" src="img/item-1.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
                 <li class="sorting-products-item">
-                  <img class="sorting-products-image" src="img/item-2.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-wrapper">
                     <a class="sorting-products-link" href="blank.html">
                       <h3 class="sorting-products-title">Профессиональная<br> селфи-палка</h3>
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
+                  <img class="sorting-products-image" src="img/item-2.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
                 <li class="sorting-products-item">
-                  <img class="sorting-products-image" src="img/item-3.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-wrapper">
                     <a class="sorting-products-link" href="blank.html">
                       <h3 class="sorting-products-title">Непотопляемая<br> селфи-палка</h3>
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
+                  <img class="sorting-products-image" src="img/item-3.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
                 <li class="sorting-products-item">
-                  <img class="sorting-products-image" src="img/item-4.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-wrapper">
                     <a class="sorting-products-link" href="blank.html">
                       <h3 class="sorting-products-title">Селфи-палка «Следуй за мной»</h3>
                     </a>
                     <p class="sorting-products-price">1 900 руб.</p>
                   </div>
+                  <img class="sorting-products-image" src="img/item-4.jpg" alt="" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -222,7 +221,7 @@
                 </li>
               </ul>
               <div class="pagination">
-                <a class="pagination-link pagination-back" href="#">Назад</a>
+                <a class="pagination-link pagination-back">Назад</a>
                 <ul class="pagination-pages">
                   <li>
                     <a class="pagination-link pagination-pages-link pagination-pages-link-current" href="#">1</a>
@@ -244,7 +243,7 @@
     <footer class="page-footer">
       <div class="footer-container">
         <div class="footer-navigation">
-          <a class="footer-logo">
+          <a class="footer-logo" href="index.html">
             <img src="img/logo-device-footer.svg" alt="Логотип магазина «Девайс»" width="163" height="35">
           </a>
           <ul class="footer-user-navigation">
