--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           </form>
           <ul class="user-navigation-list">
             <li class="user-navigation-login">
-              <a class="user-navigation-link" href="blank.html">Войти</a>
+              <a class="user-navigation-link user-navigation-link-login" href="blank.html">Войти</a>
             </li>
             <li>
-              <a class="user-navigation-link" href="blank.html">Сравнить</a>
+              <a class="user-navigation-link user-navigation-link-compare" href="blank.html">Сравнить</a>
             </li>
             <li>
-              <a class="user-navigation-link" href="blank.html">Корзина</a>
+              <a class="user-navigation-link user-navigation-link-cart" href="blank.html">Корзина</a>
             </li>
           </ul>
         </div>
@@ -177,15 +177,15 @@
             </li>
           </ul>
           <ul class="services-list">
-            <li class="services-item services-item-current">
+            <li class="services-item services-item-delivery services-item-current">
               <h3 class="services-title">Доставка</h3>
               <p class="services-text">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо<br> заработаем, поднимая его на ваш этаж.</p>
             </li>
-            <li class="services-item">
+            <li class="services-item services-item-warranty">
               <h3 class="services-title">Гарантия</h3>
               <p class="services-text">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый.<br> Товар, не дом, конечно же.</p>
             </li>
-            <li class="services-item">
+            <li class="services-item services-item-credit">
               <h3 class="services-title">Кредит</h3>
               <p class="services-text">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные<br> условия кредита. Выгодные для нашего банка, разумеется.</p>
             </li>
@@ -247,13 +247,13 @@
           </a>
           <ul class="footer-user-navigation">
             <li>
-              <a class="footer-user-navigation-link" href="blank.html">Войти</a>
+              <a class="footer-user-navigation-link footer-user-navigation-login" href="blank.html">Войти</a>
             </li>
             <li>
-              <a class="footer-user-navigation-link" href="blank.html">Сравнить</a>
+              <a class="footer-user-navigation-link footer-user-navigation-compare" href="blank.html">Сравнить</a>
             </li>
             <li>
-              <a class="footer-user-navigation-link" href="blank.html">Корзина</a>
+              <a class="footer-user-navigation-link footer-user-navigation-cart" href="blank.html">Корзина</a>
             </li>
           </ul>
         </div>
@@ -279,13 +279,13 @@
           <h2 class="visually-hidden">Мы в социальных сетях</h2>
           <ul class="footer-social-list">
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#" aria-label="Фейсбук"></a>
+              <a class="footer-social-link footer-social-facebook" href="#" aria-label="Фейсбук"></a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#" aria-label="Инстаграм"></a>
+              <a class="footer-social-link footer-social-instagram" href="#" aria-label="Инстаграм"></a>
             </li>
             <li class="footer-social-item">
-              <a class="footer-social-link" href="#" aria-label="Твиттер"></a>
+              <a class="footer-social-link footer-social-twitter" href="#" aria-label="Твиттер"></a>
             </li>
           </ul>
         </section>
