Оживила форму обратной связи и карту

--- a/catalog.html
+++ b/catalog.html
@@ -170,7 +170,7 @@
                     </a>
                     <p class="sorting-products-price">1 100 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-1.jpg" alt="" width="360" height="380">
+                  <img class="sorting-products-image" src="img/item-1.jpg" alt="Любительская селфи-палка" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -183,7 +183,7 @@
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-2.jpg" alt="" width="360" height="380">
+                  <img class="sorting-products-image" src="img/item-2.jpg" alt="Профессиональная селфи-палка" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -196,7 +196,7 @@
                     </a>
                     <p class="sorting-products-price">1 500 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-3.jpg" alt="" width="360" height="380">
+                  <img class="sorting-products-image" src="img/item-3.jpg" alt="Непотопляемая селфи-палка" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
@@ -209,7 +209,7 @@
                     </a>
                     <p class="sorting-products-price">1 900 руб.</p>
                   </div>
-                  <img class="sorting-products-image" src="img/item-4.jpg" alt="" width="360" height="380">
+                  <img class="sorting-products-image" src="img/item-4.jpg" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
                   <div class="sorting-products-to-cart">
                     <a class="button sorting-to-cart-button" href="blank.html">В корзину</a>
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
