--- a/index.html
+++ b/index.html
@@ -292,5 +292,31 @@
         <a class="footer-htmlacademy-link" href="https://https://htmlacademy.ru/intensive/htmlcss" aria-label="Онлайн-курс «Профессиональная вёрстка сайтов»"></a>
       </div>
     </footer>
+    <section class="modal modal-map">
+      <h2 class="visually-hidden">Как до нас добраться</h2>
+      <img class="modal-map-image" src="img/map-big.jpg" alt="Офис магазина по адресу город Москва, улица строителей, дом 15" width="960" height="559">
+      <iframe class="modal-map-google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473636!2d37.52742931601917!3d55.68703400452987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1604423983533!5m2!1sru!2sru" width="960" height="559" allowfullscreen title="Офис компании по адресу ул. Строителей 15, Москва"></iframe>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
+    </section>
+    <section class="modal modal-feedback">
+      <h2 class="visually-hidden">Обратная связь</h2>
+      <form class="modal-feedback-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="modal-feedback-wrapper-columns">
+          <div class="modal-feedback-column">
+            <label class="modal-feedback-label" for="name-field">Ваше имя:</label>
+            <input class="modal-feedback-input modal-feedback-name" type="text" name="name" id="name-field" placeholder="Имя Фамилия">
+          </div>
+          <div class="modal-feedback-column">
+            <label class="modal-feedback-label" for="email-field">Ваш e-mail:</label>
+            <input class="modal-feedback-input modal-feedback-email" type="email" name="email" id="email-field" placeholder="email@example.com">
+          </div>
+        </div>
+        <label class="modal-feedback-label" for="text-field">Текст письма:</label>
+        <textarea class="modal-feedback-textarea" name="feedback" id="text-field" placeholder="В свободной форме"></textarea>
+        <button class="button modal-feedback-button" type="submit">Отправить</button>
+      </form>
+      <button class="modal-close" type="button" aria-label="Закрыть"></button>
+    </section>
+    <script src="js/script.js"></script>
   </body>
 </html>
