--- a/catalog.html
+++ b/catalog.html
@@ -202,7 +202,7 @@
                     <a class="sorting-products-add" href="blank.html">Добавить к сравнению</a>
                   </div>
                 </li>
-                <li class="sorting-products-item">
+                <li class="sorting-products-item sorting-products-new">
                   <div class="sorting-products-wrapper">
                     <a class="sorting-products-link" href="blank.html">
                       <h3 class="sorting-products-title">Селфи-палка «Следуй за мной»</h3>
